--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,32 @@
 * {
   font-family: "Lucida Console", monospace;
+  background-color: rgb(231, 227, 242);
+  color: rgb(0, 55, 114);
+}
+
+h1 {
+  text-align: center;
+}
+
+a {
+  background-color: rgb(77, 45, 106);
+  color: white;
+  padding: 16px;
+  display: block;
+  text-align: center;
+  font-size: 20px;
+  text-decoration: none;
+}
+
+a:hover {
+  background-color: rgb(188, 94, 225);
+  color: white;
+  padding: 16px;
+  display: block;
+  text-align: center;
+  font-size: 24px;
+  text-decoration: none;
+  border-style:inset;
+  border-color: navy;
+  border: 20pxpx;
 }
